--- a/caculator/src/app/app.component.html
+++ b/caculator/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-calculator></app-calculator>
+<!--<app-calculator></app-calculator>-->
+<app-name-card cardName="BachBeu Dev" email="catcoon@hihi.xyz" phone="0123456789"></app-name-card>
