--- a/caculator/src/app/app.component.html
+++ b/caculator/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--<app-calculator></app-calculator>-->
-<app-name-card cardName="BachBeu Dev" email="catcoon@hihi.xyz" phone="0123456789"></app-name-card>
+<!--<app-name-card cardName="BachBeu Dev" email="catcoon@hihi.xyz" phone="0123456789"></app-name-card>-->
+<app-progress-bar width="65"></app-progress-bar>
