--- a/caculator/src/app/app.component.html
+++ b/caculator/src/app/app.component.html
@@ -1,3 +1,6 @@
 <!--<app-calculator></app-calculator>-->
-<!--<app-name-card cardName="BachBeu Dev" email="catcoon@hihi.xyz" phone="0123456789"></app-name-card>-->
-<app-progress-bar width="65"></app-progress-bar>
+<!--
+<app-name-card cardName="BachBeu Dev" email="catcoon@hihi.xyz" phone="0123456789"></app-name-card>
+-->
+<!--<app-progress-bar width="65"></app-progress-bar>-->
+<app-rating-app [max]="10" (rateChange)="onRateChange($event)"></app-rating-app>
