--- a/caculator/src/app/app.component.html
+++ b/caculator/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-name-card cardName="BachBeu Dev" email="catcoon@hihi.xyz" phone="0123456789"></app-name-card>
 -->
 <!--<app-progress-bar width="65"></app-progress-bar>-->
-<app-rating-app [max]="10" (rateChange)="onRateChange($event)"></app-rating-app>
+<!--<app-rating-app [max]="10" ></app-rating-app>-->
+<app-todo-app></app-todo-app>
