--- a/caculator/src/app/app.component.html
+++ b/caculator/src/app/app.component.html
@@ -4,4 +4,7 @@
 -->
 <!--<app-progress-bar width="65"></app-progress-bar>-->
 <!--<app-rating-app [max]="10" ></app-rating-app>-->
-<app-todo-app></app-todo-app>
+<!--<app-todo-app></app-todo-app>-->
+<!--<app-register></app-register>-->
+<app-register-final></app-register-final>
+<app-login></app-login>
